--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -89,8 +89,8 @@ block content
   //- section.page-section.sponsors 
   //-   include partials/sponsors-list 
 
-  section.page-section.sponsors-call 
-    include partials/call-sponsors
+  //- section.page-section.sponsors-call 
+  //-   include partials/call-sponsors
 
-  section.page-section.conference-map
+  section.conference-map
     include partials/map 
