--- a/server/views/layout/includes/footer.pug
+++ b/server/views/layout/includes/footer.pug
@@ -39,8 +39,8 @@ section.site-footer
         li.conference-details-nav-item
           a(href='/tickets') Tickets
       ul.conference-details-nav
-        li.conference-details-nav-item
-          a(href='/team') About
+        //- li.conference-details-nav-item
+        //-   a(href='/team') Team
         li.conference-details-nav-item
           a(href='https://koreatesol.org/join-kotesol') Membership
         li.conference-details-nav-item
