--- a/server/views/layout/includes/header.pug
+++ b/server/views/layout/includes/header.pug
@@ -36,8 +36,8 @@
             a(href='/location') Location
           li.site-menu-item
             a(href='/sponsors') Sponsors
-          li.site-menu-item
-            a(href='/feedback') Feedback
+          //- li.site-menu-item
+          //-   a(href='/feedback') Feedback
 nav.site-navigation.mobile-menu
   ul.site-menu
     .container
@@ -51,20 +51,20 @@ nav.site-navigation.mobile-menu
         a(href='/location') Location
       li.site-menu-item.supplementary
         a(href='/sponsors') Sponsors
+      //- li.site-menu-item.supplementary
+      //-   a(href='/feedback') Feedback
       li.site-menu-item.supplementary
-        a(href='/feedback') Feedback
-      li.site-menu-item.supplementary
-        a(href='/tickets') Tickets
+        a.red-text(href='/tickets') Tickets
       li.site-menu-item.supplementary.line(role='separator')
-      li.site-menu-item.supplementary
-        a(href='/team') Team
+      //- li.site-menu-item.supplementary
+      //-   a(href='/team') Team
       li.site-menu-item.supplementary
         a(href='/code-of-conduct') Code of Conduct
       li.site-menu-item.supplementary
         a(href='/privacy') Privacy Policy
       li.site-menu-item.supplementary
         a(href='mailto:jnjconference@gmail.com') Contact Us
-      li.site-menu-item.supplementary.line(role='separator')
-      li.site-menu-item.supplementary
-        a.red-text(href='/jnjkotesol-2018-booklet.pdf') Booklet
+      //- li.site-menu-item.supplementary.line(role='separator')
+      //- li.site-menu-item.supplementary
+      //-   a.red-text(href='/jnjkotesol-2018-booklet.pdf') Booklet
 
