--- a/server/views/partials/call-sponsors.pug
+++ b/server/views/partials/call-sponsors.pug
@@ -1,5 +1,5 @@
-.container
-  h2.page-section-title Want to Sponsor?
+.container.small
+  h2.section-title Want to Sponsor?
   p The KOTESOL National Conference is an excellent opportunity to reach some of the best ELT teachers in Korea.
   p Contact our 
     a(href="mailto:") sponsor team 
