--- a/server/views/partials/call.pug
+++ b/server/views/partials/call.pug
@@ -1,6 +1,9 @@
 .call-to-action
-  h2.call-title Call for Speakers
-  p Share your knowledge and your vision. This is the place to let your ideas spread, and we want to learn from your experiences. 
-  a.button.btn.right.big(href='https://docs.google.com/forms/d/e/1FAIpQLScKREjbbox6ZQDAKw7s14g8GuPgXISUMHVI1RGYNuWUOsEYRg/viewform?vc=0&c=0&w=1') 
-    | Apply
-  p CFP closes on March 24, 2019, midnight KST.
+  .container.small
+    h2.call-title Call for Speakers
+    p Share your knowledge and your vision. This is the place to let your ideas spread, and we want to learn from your experiences. 
+    a.button.btn.right.big(href='https://docs.google.com/forms/d/e/1FAIpQLScKREjbbox6ZQDAKw7s14g8GuPgXISUMHVI1RGYNuWUOsEYRg/viewform?vc=0&c=0&w=1') 
+      | Submit a Talk
+    p CFP closes on 
+      strong April 14, 2019, 
+      | midnight KST.
