--- a/server/views/privacy.pug
+++ b/server/views/privacy.pug
@@ -3,6 +3,7 @@ extends layout/index
 block content
   header.page-section
     .container.small
+      //- img.page-icon(src='/img/icons/profile.png')
       h2.page-section-title Privacy Policy
       p.section-subtitle.center 
         | At KOTESOL, we take your personal information seriously. 
