--- a/server/views/schedule.pug
+++ b/server/views/schedule.pug
@@ -10,4 +10,5 @@ block content
         | From pedagogy to technology, there's a track for everyone.
   //- include partials/schedule-table
   include partials/schedule-table-outline
-  include partials/speaker-grid
+  include partials/call
+  //- include partials/speaker-grid
