--- a/server/views/speakers.pug
+++ b/server/views/speakers.pug
@@ -8,5 +8,7 @@ block content
       h2.page-section-title Speakers
       p.section-subtitle.center Big names, Bigger ideas
 
-  include partials/plenary
-  include partials/speaker-list
+  section.page-section
+    include partials/plenary
+  include partials/call
+  //- include partials/speaker-list
