--- a/server/views/location.pug
+++ b/server/views/location.pug
@@ -5,7 +5,7 @@ block content
     .container
       h2.page-section-title Conference Venue
       p.section-subtitle.center Jeonju University, Star Center 
-      p.center
+      .center.venue-pdf
         a.button(href='http://koreatesol.org/content/jeonju-venue-directions') Venue Directions PDF
   include partials/directions
   include partials/map
