--- a/server/views/partials/map.pug
+++ b/server/views/partials/map.pug
@@ -1,7 +1,9 @@
-h2.section-title Conference Venue
-.googlemap
-  iframe(src='https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25884.475204581115!2d127.10493793520347!3d35.81074848050287!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x35703b0ebe179653%3A0x8c68077367282427!2z7KCE7KO864yA7ZWZ6rWQ!5e0!3m2!1sen!2skr!4v1509068952155', width='800', height='400', frameborder='0', style='border:0', allowfullscreen='')
-section.discoverjeonju
-  div
-    h2 Welcome to Jeonju University
-    a.page-button(href='/location') Discover Jeonju
+section.page-section
+  h2.section-title Conference Venue
+  .googlemap
+    iframe(src='https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25884.475204581115!2d127.10493793520347!3d35.81074848050287!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x35703b0ebe179653%3A0x8c68077367282427!2z7KCE7KO864yA7ZWZ6rWQ!5e0!3m2!1sen!2skr!4v1509068952155', width='800', height='400', frameborder='0', style='border:0', allowfullscreen='')
+if pageId !== 'location'
+  section.discoverjeonju
+    div
+      h2 Welcome to Jeonju University
+      a.page-button(href='/location') Discover Jeonju
