--- a/server/views/tickets.pug
+++ b/server/views/tickets.pug
@@ -14,7 +14,7 @@ block content
               p.ticket-type Non-Member
               p.ticket-price
                 span.krw &#x20A9;
-                | 10,000
+                | 30,000
             .explanation
               p Full access to the conference, networking opportunities, and the after party.
             .benefits
@@ -24,24 +24,24 @@ block content
               ul
                 li.benefit-item Network with conference attendees
                 li.benefit-item
-                  | Access to 7 amazing 
+                  | Access to all the amazing 
                   a(href='/speakers') talks
                   |  &amp; presenters
                 li.benefit-item
                   | After party in 
                   a(href='/location#shinsikaji') Shinsikaji
             .buy
-              p.center Contact us for details
+              p.center Pre-registration opening soon
               p.center
-                a.page-button.button-inverse.button(href='mailto:jnj.presenters@gmail.com') Yes! I want this!
+                a.page-button.button-inverse.button(href='mailto:jnj.presenters@gmail.com') Questions?
         li.center
           .ticket
             .price
               p.ticket-type KOTESOL Member*
               p.ticket-price
                 span.krw &#x20A9;
-                | 5,000
-              p.fineprint *Students included
+                | 20,000
+              p.fineprint *Students (10,000)
             .explanation
               p
                 | Full access to the conference, networking opportunities, the after party, as well as all KOTESOL 
@@ -54,7 +54,7 @@ block content
               ul
                 li.benefit-item Network with conference attendees
                 li.benefit-item
-                  | Access to 7 amazing 
+                  | Access to all the amazing 
                   a(href='/speakers') talks
                   |  &amp; presenters
                 li.benefit-item
@@ -90,9 +90,9 @@ block content
                   a(href='https://koreatesol.org/content/member-benefits') many more
                   | !
             .buy
-              p.center Contact us for details
+              p.center Pre-registration opening soon
               p.center
-                a.page-button.button-inverse.button(href='mailto:jnj.presenters@gmail.com') Yes! I want this!
+                a.page-button.button-inverse.button(href='mailto:jnj.presenters@gmail.com') Questions?
         li.center
           .ticket
             .price
@@ -109,7 +109,8 @@ block content
                 |  - 
                 em and
                 |  a nifty printed 
-                a(href='') conference booklet.
+                strong conference booklet.
+                //- a(href='') conference booklet.
             .benefits
               p.benefit-title
                 | Full benefits 
@@ -117,7 +118,7 @@ block content
               ul
                 li.benefit-item Network with conference attendees
                 li.benefit-item
-                  | Access to 7 amazing 
+                  | Access to all the amazing 
                   a(href='/speakers') talks
                   |  &amp; presenters
                 li.benefit-item
@@ -157,6 +158,6 @@ block content
                   a(href='https://koreatesol.org/content/member-benefits') many more
                   | !
             .buy
-              p.center Contact us for details
+              p.center Pre-registration opening soon
               p.center
-                a.page-button.button-inverse.button(href='mailto:jnj.presenters@gmail.com') Yes! I want this!
+                a.page-button.button-inverse.button(href='mailto:jnj.presenters@gmail.com') Questions?
