[update] Update contact email

--- a/server/views/layout/includes/footer.pug
+++ b/server/views/layout/includes/footer.pug
@@ -48,7 +48,7 @@ section.site-footer
         li.conference-details-nav-item
           a(href='/privacy') Privacy Policy
         li.conference-details-nav-item
-          a(href='mailto:jnjconference@gmail.com') Contact Us
+          a(href='mailto:jnj.presenters@gmail.com') Contact Us
         //
           <li class="conference-details-nav-item">
           <a href="/chat">Chat</a>
