--- a/server/views/partials/call-sponsors.pug
+++ b/server/views/partials/call-sponsors.pug
@@ -1,7 +1,11 @@
-.container.small
-  h2.section-title Want to Sponsor?
-  p The KOTESOL National Conference is an excellent opportunity to reach some of the best ELT teachers in Korea.
-  p Contact our 
-    a(href="mailto:") sponsor team 
-    | for more information regarding sponsor packages.
-  //- a.page-button.sponsor-button(href='/sponsors', style='text-align: center;') View all sponsors &rarr;
+.call-to-action
+  .container.small
+    h2.call-title Want to Sponsor?
+    p The KOTESOL National Conference is an excellent opportunity to reach some of the best ELT teachers in Korea.
+    a.button.btn.right.big(href="mailto:jnj.presenters@gmail.com") 
+      | Sponsor
+    p Contact our 
+      //- a(href="mailto:jnj.presenters@gmail.com") 
+      strong sponsor team 
+      | for more information regarding sponsor packages.
+    //- a.page-button.sponsor-button(href='/sponsors', style='text-align: center;') View all sponsors &rarr;
