--- a/server/views/partials/speaker-grid.pug
+++ b/server/views/partials/speaker-grid.pug
@@ -9,7 +9,7 @@ ul.grid
     unless speaker.id == 'plenary'
     // <article class="speaker">
     li.grid-item.photo
-      .grid-inner(style=`background-image: url('/img/people/${speaker.img}')`)
+      .grid-inner(style=`background-image: url('${speaker.img}')`)
         //- .attendee-img-shadow
         //- .attendee-img-shadow-yellow
         .speaker-meta-box
