--- a/server/views/partials/speaker-list.pug
+++ b/server/views/partials/speaker-list.pug
@@ -8,7 +8,7 @@
           </div>
         each speaker in speakers
           .grid-item.photo
-            .grid-inner(style=`background-image: url('/img/people/${speaker.img}')`)
+            .grid-inner(style=`background-image: url('${speaker.img}')`)
               .speaker-meta-box
                 //- .speaker-meta.grid-layout
                   //- a(href=`/speakers/${speaker.shortname}`)
@@ -16,13 +16,29 @@
                   //- p.speaker-affiliation= speaker.affiliation
                   //- p.speaker-details= speaker.details
             .speaker-meta-visible
-              //- a(href=`/speakers/${speaker.shortname}`)
-              p.speaker-name=speaker.name
+              a(href=`/speakers/${speaker.shortname}`)
+                p.speaker-name=speaker.name
               p.speaker-affiliation
                 !=speaker.affiliation
               p.speaker-details
                 !=speaker.details
           .speaker-topic
-            h3.speaker-name= speaker.name
+            a(href=`/speakers/${speaker.shortname}`)
+              h3.speaker-name= speaker.name
+            p.speaker-affiliation 
+              !=speaker.affiliation
+            p.speaker-data 
+              //- span= speaker.topic
+              //- span= speaker.subtopic
+              span= speaker.track
+              span= speaker.room 
+                | &nbsp;&bull;&nbsp;
+              span= speaker.time
             h4.speaker-title= speaker.title
             p.speaker-abstract= speaker.summary
+            .speaker-info
+                h4.speaker-bio-title About #{speaker.nickname}
+                p.speaker-bio
+                  !=speaker.bio
+
+
