--- a/server/views/partials/sponsors-list.pug
+++ b/server/views/partials/sponsors-list.pug
@@ -1,5 +1,5 @@
 .container
-  h2.page-section-title Our sponsoring partners
+  h2.section-title.white Our sponsoring partners
   ul.sponsor-list.sponsor-list-small
     // JJU
     li.sponsor-list-item
