--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -49,10 +49,10 @@ block content
               circle.pie(r='50', cx='50', cy='50')
 
       p.page-note 
-        | Pre-registration opens soon!
+        | Pre-registration closes May 10!
         br 
-        | Interested in presenting? 
-        a(href='https://docs.google.com/forms/d/e/1FAIpQLScKREjbbox6ZQDAKw7s14g8GuPgXISUMHVI1RGYNuWUOsEYRg/viewform?vc=0&c=0&w=1') Submit a Talk
+        | Sign up now! 
+        a(href='https://koreatesol.org/content/2019-national-conference-pre-registration') Register
       p.presented-by 
         | Presented by
         a(href="https://koreatesol.org")
@@ -66,16 +66,16 @@ block content
     include partials/plenary
 
   section.call 
-    include partials/call
+    include partials/prereg
 
-  //- section.page-section.speakers
-  //-   include partials/speaker-grid 
-
-  section.page-section.schedule.parallax 
-    include partials/schedule-table-outline
+  section.page-section.speakers
+    include partials/speaker-grid 
 
   //- section.page-section.schedule.parallax 
-  //-   include partials/schedule-table 
+  //-   include partials/schedule-table-outline
+
+  section.page-section.schedule.parallax 
+    include partials/schedule-table 
 
   //- section.page-section.parallax 
   //-   include partials/schedule-grid 
@@ -86,11 +86,11 @@ block content
   //- section.page-section.gallery 
   //-   include partials/gallery-grid
 
-  //- section.page-section.sponsors 
-  //-   include partials/sponsors-list 
+  section.page-section.sponsors 
+    include partials/sponsors-list 
 
-  //- section.page-section.sponsors-call 
-  //-   include partials/call-sponsors
+  section.sponsors-call 
+    include partials/call-sponsors
 
   section.conference-map
     include partials/map 
