--- a/server/views/partials/speaker-grid.pug
+++ b/server/views/partials/speaker-grid.pug
@@ -15,7 +15,7 @@ ul.grid
         .speaker-meta-box
           .speaker-meta.grid-layout
             a(href=`/speakers/${speaker.shortname}`)
-              p.speaker-name=speaker.title
+              p.speaker-title= speaker.title
             //- p.speaker-affiliation
             //-   !=speaker.affiliation
             //- p.speaker-details
