--- a/server/views/partials/schedule-table.pug
+++ b/server/views/partials/schedule-table.pug
@@ -1,5 +1,8 @@
 // Schedule
-.conference-schedule.container.small
+//- - var conferenceContainer = pageId === 'schedule' ? '.conference-schedule.container' : '.conference-schedule.container.small'
+//- conferenceContainer
+.conference-schedule.container
+  //- .conference-schedule.container.small
   if pageId !== 'schedule'
     h2.page-section-title Conference Schedule
   table.schedule-section
@@ -15,102 +18,112 @@
       td.schedule-venue Foyer
     //- 10:00
     tr
-      td.schedule-time(rowspan='7') 
+      td.schedule-time(rowspan='8') 
         span 10:00 am
       td.schedule-span(colspan='4')
         | Workshops I 
         span (50 min)
     tr.room1
-      td.schedule-track Track 1
+      td.schedule-track Highlighted
       td.schedule-session
-        a(href='/speakers/Jeffrey_Shelley') Anthropology: Building a Class Culture with Impact 
+        a(href='/speakers/Grace_H_Wang') How to Do Action Research: A Guide for ELT Classroom Teachers 
           i.fas.fa-external-link-alt
-      td.schedule-speaker J. Shea Lee
+      td.schedule-speaker Grace H. Wang
       td.schedule-venue 103
     tr.room2
-      td.schedule-track Track 2
+      td.schedule-track Motivation
       td.schedule-session
-        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist 
+        a(href='/speakers/David_Devora') Using Personal Relationships to Motivate English Learning 
           i.fas.fa-external-link-alt
-      td.schedule-speaker Paul Johnson
+      td.schedule-speaker David Devora
       td.schedule-venue 104
     tr.room3
-      td.schedule-track Track 3
+      td.schedule-track Skills
       td.schedule-session
-        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist 
+        a(href='/speakers/Richard_Schlight') EFL Academic Writing Instruction Workshop 
           i.fas.fa-external-link-alt
-      td.schedule-speaker Paul Johnson
+      td.schedule-speaker Richard Schlight
       td.schedule-venue 201
     tr.room4
-      td.schedule-track Track 4
+      td.schedule-track Technology
       td.schedule-session
-        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist 
+        a(href='/speakers/Ali_Safavi') Teaching EFL through Korean Culture 
           i.fas.fa-external-link-alt
-      td.schedule-speaker Paul Johnson
+      td.schedule-speaker Ali Safavi
       td.schedule-venue 202
     tr.room5
-      td.schedule-track Track 5
+      td.schedule-track Mixed
       td.schedule-session
-        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist 
+        a(href='/speakers/Mike_Peacock') Meet the SIGs Breakfast 
           i.fas.fa-external-link-alt
-      td.schedule-speaker Paul Johnson
+      td.schedule-speaker Mike Peacock
       td.schedule-venue 203
-    tr.room6
-      td.schedule-track Track 6
+    tr.room6(rowspan='2')
+      td.schedule-track(rowspan='2') Research
       td.schedule-session
-        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist 
+        a(href='/speakers/Angela_Jeannette') Ups and downs - Tracking student motivation though motivational panels 
           i.fas.fa-external-link-alt
-      td.schedule-speaker Paul Johnson
-      td.schedule-venue 204
+      td.schedule-speaker Angela Jeannette
+      td.schedule-venue(rowspan='2') 204
+    tr
+      td.schedule-session
+        a(href='/speakers/Stephen_Patrick_Hoag') Exploring Learning Autonomy and Motivation in South Korean Students 
+          i.fas.fa-external-link-alt
+      td.schedule-speaker Stephen Patrick Hoag
     //- 11:00
     tr
-      td.schedule-time(rowspan='7') 
+      td.schedule-time(rowspan='8') 
         span 11:00 am
       td.schedule-span(colspan='4')
         | Workshops II 
         span (50 min)
     tr.room1
-      td.schedule-track Track 1
+      td.schedule-track Highlighted
       td.schedule-session
-        a(href='/speakers/Jeffrey_Shelley') Anthropology: Building a Class Culture with Impact 
+        a(href='/speakers/James_Kimball') Motivating Young Learners Through Effective Classroom Management 
           i.fas.fa-external-link-alt 
-      td.schedule-speaker J. Shea Lee
+      td.schedule-speaker James Kimball
       td.schedule-venue 103
     tr.room2
-      td.schedule-track Track 2
+      td.schedule-track Motivation
       td.schedule-session
-        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist 
+        a(href='/speakers/Bryan_Hale') Using Board Games for Conversation Practice 
           i.fas.fa-external-link-alt
-      td.schedule-speaker Paul Johnson
+      td.schedule-speaker Bryan Hale
       td.schedule-venue 104
     tr.room3
-      td.schedule-track Track 3
+      td.schedule-track Skills
       td.schedule-session
-        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist 
+        a(href='/speakers/Richard_Steven_Eigenberg') Practicing fluency alone? ABSOLUTELY! How about accuracy? MAYBE! 
           i.fas.fa-external-link-alt
-      td.schedule-speaker Paul Johnson
+      td.schedule-speaker Steven Eigenberg
       td.schedule-venue 201
     tr.room4
-      td.schedule-track Track 4
+      td.schedule-track Technology
       td.schedule-session
-        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist 
+        a(href='/speakers/Bethany_Martens') iPad pro Implementation for L2 instruction 
           i.fas.fa-external-link-alt
-      td.schedule-speaker Paul Johnson
+      td.schedule-speaker Bethany Martens
       td.schedule-venue 202
     tr.room5
-      td.schedule-track Track 5
+      td.schedule-track Mixed
       td.schedule-session
-        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist 
+        a(href='/speakers/Michael_Free') Panel: Session Types and Speaker Selection at Kotesol's Large Events 
           i.fas.fa-external-link-alt
-      td.schedule-speaker Paul Johnson
+      td.schedule-speaker Michael Free
       td.schedule-venue 203
-    tr.room6
-      td.schedule-track Track 6
+    tr.room6(rowspan='2')
+      td.schedule-track(rowspan='2') Research
       td.schedule-session
-        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist 
+        a(href='/speakers/Mary_Abura') Developing Learning Agility 
           i.fas.fa-external-link-alt
-      td.schedule-speaker Paul Johnson
-      td.schedule-venue 204
+      td.schedule-speaker Mary Abura
+      td.schedule-venue(rowspan='2') 204
+    tr
+      td.schedule-session
+        a(href='/speakers/Yong-Jik_Lee') Elementary Pre-service Teachers’ Self-efficacy to Teach ELLs 
+          i.fas.fa-external-link-alt
+      td.schedule-speaker Yong-Jik Lee
     //- Lunch (12:00)
     tr
       td.schedule-time 12:00 pm
@@ -127,150 +140,166 @@
       td.schedule-venue Onnuri Hall
     //- 2:00
     tr
-      td.schedule-time(rowspan='7') 
+      td.schedule-time(rowspan='8') 
         span 2:00 pm
       td.schedule-span(colspan='4')
         | Workshops III 
         span (50 min)
     tr.room1
-      td.schedule-track Track 1
+      td.schedule-track Highlighted
       td.schedule-session
-        a(href='/speakers/Jeffrey_Shelley') Anthropology: Building a Class Culture with Impact 
+        a(href='/speakers/Art_Mesa') People of Color SIG 
           i.fas.fa-external-link-alt
-      td.schedule-speaker J. Shea Lee
+      td.schedule-speaker Art Mesa
       td.schedule-venue 103
     tr.room2
-      td.schedule-track Track 2
+      td.schedule-track Motivation
       td.schedule-session
-        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist 
+        a(href='/speakers/Kylie_Genter') Improv Comedy as a Tool for English Language Learning 
           i.fas.fa-external-link-alt
-      td.schedule-speaker Paul Johnson
+      td.schedule-speaker Kylie Genter
       td.schedule-venue 104
     tr.room3
-      td.schedule-track Track 3
+      td.schedule-track Skills
       td.schedule-session
-        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist 
+        a(href='/speakers/Emmy_Min') Giving Feedback to Students' Writing 
           i.fas.fa-external-link-alt
-      td.schedule-speaker Paul Johnson
+      td.schedule-speaker Emmy Min
       td.schedule-venue 201
     tr.room4
-      td.schedule-track Track 4
+      td.schedule-track Technology
       td.schedule-session
-        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist
-      td.schedule-speaker Paul Johnson
+        a(href='/speakers/Diane_Santos') To See Each Piece of the Mosaic
+          i.fas.fa-external-link-alt
+      td.schedule-speaker Diane Santos
       td.schedule-venue 202
     tr.room5
-      td.schedule-track Track 5
+      td.schedule-track Mixed
       td.schedule-session
-        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist 
+        a(href='/speakers/Vanessa_Virgiel') EFL in Korea's Remote Elementary Schools: Challenges and Opportunities 
           i.fas.fa-external-link-alt
-      td.schedule-speaker Paul Johnson
+      td.schedule-speaker Vanessa Virgiel
       td.schedule-venue 203
-    tr.room6
-      td.schedule-track Track 6
+    tr.room6(rowspan='2')
+      td.schedule-track(rowspan='2') Research
       td.schedule-session
-        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist 
+        a(href='/speakers/Rhoda_Makhanya') Project-Based learning: A method to spice up lessons 
           i.fas.fa-external-link-alt
-      td.schedule-speaker Paul Johnson
-      td.schedule-venue 204
+      td.schedule-speaker Rhoda Makhanya
+      td.schedule-venue(rowspan='2') 204
+    tr
+      td.schedule-session
+        a(href='/speakers/Grant_Kimberlin') The Evil of Banality: Intersubjectivity and the Text 
+          i.fas.fa-external-link-alt
+      td.schedule-speaker Grant Kimberlin
     //- 3:00
     tr
-      td.schedule-time(rowspan='7') 
+      td.schedule-time(rowspan='8') 
         span 3:00 pm
       td.schedule-span(colspan='4')
         | Workshops IV 
         span (50 min)
     tr.room1
-      td.schedule-track Track 1
+      td.schedule-track Highlighted
       td.schedule-session
-        a(href='/speakers/Luis_Caballero') Using Critical Pedagogy in the EFL Classroom 
+        a(href='/speakers/Jack_Richards') Product &amp; Process in Course Evaluation 
           i.fas.fa-external-link-alt
-      td.schedule-speaker Luis Caballero
+      td.schedule-speaker Jack C. Richards
       td.schedule-venue 103
     tr.room2
-      td.schedule-track Track 2
+      td.schedule-track Motivation
       td.schedule-session
-        a(href='/speakers/Rhea_Metituk') Integration Station &ndash; Increasing Student Talking time &amp; Spicing up the Classroom 
+        a(href='/speakers/Jared_McKee') Motivating Students to Read: Interactive Activities to Increase Engagement 
           i.fas.fa-external-link-alt
-      td.schedule-speaker Rhea Metituk
+      td.schedule-speaker Jared McKee
       td.schedule-venue 104
     tr.room3
-      td.schedule-track Track 3
+      td.schedule-track Skills
       td.schedule-session
-        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist 
+        a(href='/speakers/Nicole_Domay') Classroom Management Strategies for the English Foreign Language Context 
           i.fas.fa-external-link-alt
-      td.schedule-speaker Paul Johnson
+      td.schedule-speaker Nicole Domay
       td.schedule-venue 201
     tr.room4
-      td.schedule-track Track 4
+      td.schedule-track Technology
       td.schedule-session
-        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist 
+        a(href='/speakers/Michael_Rabbidge') Innovation in the use of film in ELT 
           i.fas.fa-external-link-alt
-      td.schedule-speaker Paul Johnson
+      td.schedule-speaker Michael Rabbidge
       td.schedule-venue 202
     tr.room5
-      td.schedule-track Track 5
+      td.schedule-track Mixed
       td.schedule-session
-        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist 
+        a(href='/speakers/York_Weatherford') Using Popular Music to Motivate University EFL Students 
           i.fas.fa-external-link-alt
-      td.schedule-speaker Paul Johnson
+      td.schedule-speaker York Weatherford
       td.schedule-venue 203
-    tr.room6
-      td.schedule-track Track 6
+    tr.room6(rowspan='2')
+      td.schedule-track(rowspan='2') Research
       td.schedule-session
-        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist 
+        a(href='/speakers/Eric_Duncan_Reynolds') Mobile tech and Gamification: Motiva(c)tion in Korean EFL 
           i.fas.fa-external-link-alt
-      td.schedule-speaker Paul Johnson
-      td.schedule-venue 204
+      td.schedule-speaker Eric Duncan Reynolds
+      td.schedule-venue(rowspan='2') 204
+    tr
+      td.schedule-session
+        a(href='/speakers/Hee-eun_Renee_Kim') Tag-Talk: “Who’s it?” “I’m it.” 
+          i.fas.fa-external-link-alt
+      td.schedule-speaker Hee-eun (Renee) Kim
     //- 4:00
     tr
-      td.schedule-time(rowspan='7') 
+      td.schedule-time(rowspan='8') 
         span 4:00 pm
       td.schedule-span(colspan='4')
         | Workshops V 
         span (50 min)
     tr.room1
-      td.schedule-track Track 1
+      td.schedule-track Highlighted
       td.schedule-session
-        a(href='/speakers/Maria_Lisak') Snowstorms &amp; Cheatsheets - End of Term Reflection 
+        a(href='/speakers/Katrina_Sten') Hagwon Exposé: Where Student Motivation Equals Paychecks 
           i.fas.fa-external-link-alt
-      td.schedule-speaker Maria Lisak
+      td.schedule-speaker Katrina Sten
       td.schedule-venue 103
     tr.room2
-      td.schedule-track Track 2
+      td.schedule-track Motivation
       td.schedule-session
-        a(href='/speakers/Aaron_Snowberger') Atomic Habits that will turn you into a Superhero 
+        a(href='/speakers/Angela_DiSanto') Teaching Writing with Anything But! 
           i.fas.fa-external-link-alt
-      td.schedule-speaker Aaron Snowberger
+      td.schedule-speaker Angela DiSanto
       td.schedule-venue 104
     tr.room3
-      td.schedule-track Track 3
+      td.schedule-track Skills
       td.schedule-session
-        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist 
+        a(href='/speakers/Pamila_J_Florea') Harry Potter and the Muggle Motivation 
           i.fas.fa-external-link-alt
-      td.schedule-speaker Paul Johnson
+      td.schedule-speaker Pamila J. Florea
       td.schedule-venue 201
     tr.room
-      td.schedule-track Track 4
+      td.schedule-track Technology
       td.schedule-session
-        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist 
+        a(href='/speakers/Jessica_Magnusson') Creating Administrative Systems with QR Codes and Google Drive Tools 
           i.fas.fa-external-link-alt
-      td.schedule-speaker Paul Johnson
+      td.schedule-speaker Jessica Magnusson
       td.schedule-venue 202
     tr.room
-      td.schedule-track Track 5
+      td.schedule-track Mixed
       td.schedule-session
-        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist 
+        a(href='/speakers/Paul_Johnson') Why Study Philosophy? 
           i.fas.fa-external-link-alt
       td.schedule-speaker Paul Johnson
       td.schedule-venue 203
-    tr.room
-      td.schedule-track Track 6
+    tr.room6(rowspan='2')
+      td.schedule-track(rowspan='2') Research
       td.schedule-session
-        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist 
+        a(href='/speakers/David_Cedric_Bennette') A root analytic approach to academic word lists 
           i.fas.fa-external-link-alt
-      td.schedule-speaker Paul Johnson
-      td.schedule-venue 204
+      td.schedule-speaker David Cedric Bennette
+      td.schedule-venue(rowspan='2') 204
+    tr
+      td.schedule-session
+        a(href='/speakers/Joseph_Tomei') Construal in Language Learning 
+          i.fas.fa-external-link-alt
+      td.schedule-speaker Joseph_Tomei
     //- Closing
     tr.main-event
       td.schedule-time 4:50 pm
