--- a/server/views/partials/speaker-list.pug
+++ b/server/views/partials/speaker-list.pug
@@ -1,44 +1,50 @@
-.container.small
-  article
-    .speaker-list
-      .grid
-        //
-          <div class="grid-item grid-title">
-          <div class="grid-inner"><a href="/speakers"><span>More</span> Speakers</a></div>
-          </div>
-        each speaker in speakers
-          .grid-item.photo
-            .grid-inner(style=`background-image: url('${speaker.img}')`)
-              .speaker-meta-box
-                //- .speaker-meta.grid-layout
-                  //- a(href=`/speakers/${speaker.shortname}`)
-                    //- p.speaker-name= speaker.name
-                  //- p.speaker-affiliation= speaker.affiliation
-                  //- p.speaker-details= speaker.details
-            .speaker-meta-visible
-              a(href=`/speakers/${speaker.shortname}`)
-                p.speaker-name=speaker.name
-              p.speaker-affiliation
-                !=speaker.affiliation
-              p.speaker-details
-                !=speaker.details
-          .speaker-topic
-            a(href=`/speakers/${speaker.shortname}`)
-              h3.speaker-name= speaker.name
-            p.speaker-affiliation 
-              !=speaker.affiliation
-            p.speaker-data 
-              //- span= speaker.topic
-              //- span= speaker.subtopic
-              span= speaker.track
-              span= speaker.room 
-                | &nbsp;&bull;&nbsp;
-              span= speaker.time
-            h4.speaker-title= speaker.title
-            p.speaker-abstract= speaker.summary
-            .speaker-info
-                h4.speaker-bio-title About #{speaker.nickname}
-                p.speaker-bio
-                  !=speaker.bio
+.container.small.speaker-list
+  .grid
+    //
+      <div class="grid-item grid-title">
+      <div class="grid-inner"><a href="/speakers"><span>More</span> Speakers</a></div>
+      </div>
+    each speaker in speakers
+      .grid-item.photo
+        .grid-inner(style=`background-image: url('${speaker.img}')`)
+          //- .speaker-meta-box
+            //- .speaker-meta.grid-layout
+              //- a(href=`/speakers/${speaker.shortname}`)
+                //- p.speaker-name= speaker.name
+              //- p.speaker-affiliation= speaker.affiliation
+              //- p.speaker-details= speaker.details
+        .speaker-meta-visible
+          a(href=`/speakers/${speaker.shortname}`)
+            p.speaker-name=speaker.name
+          //- p.speaker-affiliation
+          //-   !=speaker.affiliation
+          //- p.speaker-details
+          //-   !=speaker.details
+      .speaker-topic
+        h3.speaker-name
+          a(href=`/speakers/${speaker.shortname}`)
+            != speaker.name
+          if speaker.affiliation
+            span.speaker-affiliation= `(${speaker.affiliation})`
+        p.speaker-data 
+          //- span= speaker.topic
+          //- span= speaker.subtopic
+          span.speaker-track= speaker.track
+          | &nbsp;&bull;&nbsp;
+          span.speaker-room= speaker.room 
+          | &nbsp;&bull;&nbsp;
+          span.speaker-time= speaker.time
+        h4.speaker-title= speaker.title
+        if speaker.topic
+          p.speaker-meta= speaker.topic
+            if speaker.subtopic
+              | &nbsp;&bull;&nbsp;
+              span= speaker.subtopic
+        p.speaker-abstract= speaker.summary
+        if speaker.bio
+          .speaker-info
+              h4.speaker-bio-title About #{speaker.nickname}
+              p.speaker-bio
+                !=speaker.bio
 
 
