--- a/server/views/speaker-single.pug
+++ b/server/views/speaker-single.pug
@@ -6,26 +6,44 @@ block content
     .container
       h2.page-section-title= speaker.name
       p.section-subtitle.center= speaker.affiliation
+      .center.venue-pdf
+        a.button(href='/speakers') Meet our Speakers
   section.page-section
     .container.small
-      h2.section-title Meet our Speakers
       // http://davist11.github.io/css-diamond-grid/#
       article.speaker
         .speaker-info-section
           .speaker-photo-box
-            .speaker-photo(style=`background-image: url('/img/people/${speaker.img}')`)
-            .attendee-img-shadow
-            .attendee-img-shadow-yellow
+            .speaker-photo(style=`background-image: url('${speaker.img}')`)
+            //- .attendee-img-shadow
+            //- .attendee-img-shadow-yellow
           .speaker-meta
-            p.speaker-name
-              a(href=`/speakers/${speaker.shortname}`)=speaker.name
-            p.speaker-affiliation=speaker.affiliation
-            p.speaker-session
+            p.speaker-data 
+              //- span= speaker.topic
+              //- span= speaker.subtopic
+              span.speaker-track= speaker.track
+              | &nbsp;&bull;&nbsp;
+              span.speaker-room= speaker.room 
+              | &nbsp;&bull;&nbsp;
+              span.speaker-time= speaker.time
+            h3.speaker-name= speaker.name
+              //- a(href=`/speakers/${speaker.shortname}`)=speaker.name
+              if speaker.affiliation
+                span.speaker-affiliation= `(${speaker.affiliation})`
+            
+            h3.speaker-session
               strong Talk / 
-              a(href=`/speakers/${speaker.shortname}`)=speaker.title
+              //- a(href=`/speakers/${speaker.shortname}`)
+              span= speaker.title
+            if speaker.topic
+              p.speaker-meta.speaker-topic= speaker.topic
+                if speaker.subtopic
+                  | &nbsp;&bull;&nbsp;
+                  span= speaker.subtopic
             p.speaker-abstract
               !=speaker.abstract
-            .speaker-info
-              p.speaker-bio-title About #{speaker.nickname}
-              p.speaker-bio
-                !=speaker.bio
+            if speaker.bio
+              .speaker-info
+                h4.speaker-bio-title About #{speaker.nickname}
+                p.speaker-bio
+                  !=speaker.bio
